<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2e6ff"
    android:padding="10dp"
    android:id="@+id/llBackground"
    tools:context=".activities.TileActivity">

    <TextView
        android:text="@string/players_on_tile"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvPlayer1"
        android:text="@string/players_on_tile_default_text"
        android:textSize="20sp"
        android:tag="name"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvPlayer2"
        android:text=""
        android:textSize="20sp"
        android:tag="name"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvPlayer3"
        android:text=""
        android:textSize="20sp"
        android:tag="name"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvPlayer4"
        android:text=""
        android:textSize="20sp"
        android:tag="name"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvSpecText"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:text="ide jön majd a mező módosító képességének leírása\na háttérszín pedig a mező színe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:text="@string/back" />
</LinearLayout>